<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Gestión de Solicitudes de Traspasos</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_extraction">Extraction requests</string>
    <string name="menu_return">Return requests</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="welcome">Welcome!</string>
    <string name="connection_failed">Connection failed</string>
    <string name="user_has_no_permissions">You has no assigned role or permissions for this property</string>
    <string name="empty_fields">Enter username and password</string>
    <string name="select">Select</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="profile">Profile</string>
    <string name="exit_message">Please click back again to exit</string>

    <string name="language">Language</string>
    <string name="property">Property</string>
    <string name="select_warehouse">Select requesting warehouse</string>
    <string name="menu_warehouse">Warehouse</string>
    <string name="stock">Stock</string>
    <string name="menu_confirm">Confirm</string>
    <string name="search_hint">Search</string>
    <string name="filter">Filter by</string>
    <string name="extraction_request">Extraction request</string>
    <string name="return_request">Return request</string>
    <string name="internet_connection_failed">You do not have an internet access, check your connection and try again</string>
    <string name="stock_empty">Existence 0</string>
    <string name="materials">Materials</string>
    <string name="loading">Please wait, loading...</string>
    <string name="wharehouses_updated">Warehouse catalog has been successfully updated</string>
    <string name="product_added_to_request">Product added to the request</string>
    <string name="product_removed_from_request">Product removed from the request</string>
    <string name="show_request">Go to request</string>
    <string name="menu_save">Save</string>
    <string name="new_request">New request</string>
    <string name="request_text">Request text</string>
    <string name="request_text_message">Insert text for request</string>
    <string name="req_qnt_message">Insert quantities of materials</string>
    <string name="created">Created</string>
    <string name="rejected">Rejected</string>
    <string name="released">Released</string>
    <string name="to_be_confirmed">To be confirmed</string>
    <string name="reprocessing">Reprocessing</string>
    <string name="processed">Processed</string>
    <string name="erased">Erased</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="applyfor">Request</string>
    <string name="confirm">Confirm</string>
    <string name="check">Check</string>
    <string name="materials_selection_message">The selected materials must belong to the same warehouse</string>
    <string name="stock_message">This warehouse does not allow to select materials without stock 0</string>
    <string name="update_request">Update request</string>
    <string name="partially_confirmed">Partially confirmed</string>
    <string name="request_again">Request again</string>
    <string name="error_while_updating_data">An error occurred while updating the data</string>
    <string name="request">Request</string>
    <string name="check_to_delete">Check to delete</string>
    <string name="requested">Requested</string>
    <string name="confirmed">Confirmed</string>
    <string name="warehouse_message">Select a warehouse to continue</string>
    <string name="req_qnt_exceeded1">The quantity of cannot be greater than</string>
    <string name="req_qnt_exceeded2">cannot be greater than</string>
    <string name="check_to_confirm">Check the materials you want to confirm for processing</string>
    <string name="check_materials">Confirm</string>
    <string name="confirm_materials">Confirm materials</string>
    <string name="body_email">Authorization is required for application NO.</string>
    <string name="total">"Total: "</string>
    <string name="menu_authorize">Authorize</string>
    <string name="menu_reject">Reject</string>
    <string name="confirmation">Confirmation</string>
    <string name="warning_reject_message">Are you sure you want to cancel the request? Press accept to continue.</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="rejection_text">Reasons for rejection</string>
    <string name="date">Date: </string>
    <string name="menu_process">Process</string>
    <string name="from">"From "</string>
    <string name="to">" to "</string>
    <string name="authorized">Authorized</string>
    <string name="waiting_for">Waiting for</string>
    <string name="body_email2">"Has been authorized the request with number "</string>
    <string name="body_email3">"Is already waiting for confirmation the request with number "</string>
    <string name="body_email4">"Has been mark to reprocess the request with number "</string>
    <string name="body_email5">"Has been processed the application with number "</string>
    <string name="body_email6">"Has been released the request with number "</string>
    <string name="body_email7">"Has been partially confirmed the application with number "</string>
    <string name="body_email_start">"Hello good morning\n\n"</string>
    <string name="body_email_end">"\n Best regards and have a great day"</string>
    <string name="comfirmation_error">This material cannot be confirmed because the required quantity is different from the confirmed quantity.</string>
    <string name="confirmed_quantity">" Confirmed quantity: "</string>
    <string name="date_filter">Filtrar por fecha</string>
    <string name="select_status">Select status</string>
    <string name="select_property">Select a property to continue</string>
    <string name="to_continue">Continue</string>
    <string name="select_materials">Select materials to process</string>
    <string name="extractions">Extractions</string>
    <string name="returns">Returns</string>
    <string name="check_all">Check all</string>
    <string name="cannot_be_selected_request">This request cannot be selected</string>
    <string name="level">Level</string>
    <string name="selected">Selected</string>
    <string name="warehouse_download_failed">Could not download the warehouse catalog, restart the application</string>
    <string name="exit">Exit</string>
    <string name="category">Category</string>
    <string name="material_type">Type of material</string>
    <string name="general">General</string>
    <string name="restaurants">Restaurants</string>
    <string name="pubs">Pubs</string>
    <string name="common">Common</string>
    <string name="shops">Shops</string>
    <string name="golf">Golf</string>
    <string name="others">Others</string>
    <string name="foods">foods</string>
    <string name="drinks">Drinks</string>
    <string name="cuts">cuts</string>
    <string name="operation_team">Operation Team</string>
    <string name="maintenance">Maintenance</string>
    <string name="stationery">Stationery</string>
    <string name="supplies">Supplies</string>
    <string name="category_messge">Select a category</string>
    <string name="material_type_message">Select a type of material to continue</string>
    <string name="status">Status</string>
    <string name="all">All</string>
    <string name="user_not_found">User not found</string>
    <string name="user_has_no_warehouse">You does not have assigned warehouse</string>
    <string name="requesting_warehouse">Requesting warehouse</string>
    <string name="supplier_warehouse">Supplier warehouse</string>
    <string name="amount">"Amount: "</string>
    <string name="materials_delete_message">Unable to remove all materials from the application</string>
    <string name="request_authorize_messge">The request could not be authorized</string>

    <string name="mtrl_picker_range_header_title" tools:override="true">Select a date range</string>
    <string name="mtrl_picker_range_header_unselected" tools:override="true">Select a date range</string>
    <string name="mtrl_picker_range_header_only_start_selected" tools:override="true">%s - End date</string>
    <string name="mtrl_picker_range_header_only_end_selected" tools:override="true">Start date - %s</string>
    <string name="mtrl_picker_text_input_date_range_start_hint" tools:override="true">Start date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint" tools:override="true">End date</string>
    <string name="mtrl_picker_text_input_date_format" tools:override="true">dd/MM/yy</string>
    <string name="mtrl_picker_out_of_range" tools:override="true">You have exceeded the valid range: %1$s</string>
    <string name="mtrl_picker_invalid_format" tools:override="true">Invalid date format. Use: %1$s</string>
    <string name="mtrl_picker_save" tools:override="true">Save</string>
    <string name="fromDate">From</string>
    <string name="toDate">To</string>
</resources>
