<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_extraction"
            android:icon="@drawable/ic_menu_ext"
            android:title="@string/menu_extraction" />
        <item
            android:id="@+id/nav_return"
            android:icon="@drawable/ic_menu_ret"
            android:title="@string/menu_return" />
    </group>
    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_warehouse"
                android:icon="@drawable/ic_menu_transfer"
                android:title="@string/menu_warehouse"
                android:visible="false" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_exit_to_app"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
