<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context="com.rcdhotels.gestiondesolicitudes.login.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewLogoWhite"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_transfer"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewProp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/property"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerHotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttonselector"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:targetApi="lollipop" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>