<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_border"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.dialog.RetFilterMaterialsDialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/material_type" />

    <Spinner
        android:id="@+id/spinnerMaterialType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/buttonFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonselector"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:targetApi="lollipop" />
</LinearLayout>